--- a/3. Hafta/Eğitim Öncesi/3.Hafta Eğitim Öncesi Görevleri.ipynb
+++ b/3. Hafta/Eğitim Öncesi/3.Hafta Eğitim Öncesi Görevleri.ipynb
@@ -15,13 +15,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "NGjvNwKx_Te7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "False\n"
+          ]
+        }
+      ],
       "source": [
-        "# 1.Problemin Çözümünü Buraya Yazınız"
+        "# False = Tam bolunemez\n",
+        "# True = Tam bolunebilir\n",
+        "\n",
+        "number = int(input(\"Bir sayi giriniz: \"))\n",
+        "print(number % 7 == 0)"
       ]
     },
     {
@@ -55,13 +67,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "MXTtCxI1_Te8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Harf notunuz DD\n"
+          ]
+        }
+      ],
       "source": [
-        "# 2.Problemin Çözümünü Buraya Yazınız"
+        "# Vize * 0.4\n",
+        "# Final * 0.6\n",
+        "# Vize + Final = Ortalama\n",
+        "\n",
+        "vize_notu = int(input(\"Vize notunuzu giriniz: \"))\n",
+        "final_notu = int(input(\"Final notunuzu giriniz: \"))\n",
+        "ortalama = vize_notu * 0.4 + final_notu * 0.6\n",
+        "\n",
+        "if final_notu > 50:\n",
+        "    if ortalama >= 85:\n",
+        "        print(\"Harf notunuz AA\")\n",
+        "    elif 75 <= ortalama < 85:\n",
+        "        print(\"Harf notunuz BA\")\n",
+        "    elif 70 <= ortalama <= 75:\n",
+        "        print(\"Harf notunuz CB\")\n",
+        "    elif 65 <= ortalama <= 70 :\n",
+        "        print(\"Harf notunuz CC\")\n",
+        "    elif 60 <= ortalama <= 65:\n",
+        "        print(\"Harf notunuz DC\")\n",
+        "    elif 50 <= ortalama <= 55:\n",
+        "        print(\"Harf notunuz DD\")\n",
+        "    else:\n",
+        "        print(\"Ortalamaniz 50'nin altinda. Harf notunuz FF\")\n",
+        "else:\n",
+        "    print(\"Final notunuz 50'nin altinda. Harf notunuz FF\")"
       ]
     },
     {
@@ -84,13 +128,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "metadata": {
         "id": "bPjE8W0i_Te8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Gorkem'in yasi daha buyuk ve 20 yasinda.\n"
+          ]
+        }
+      ],
       "source": [
-        "# 3.Problemin Çözümünü Buraya Yazınız"
+        "# 3.Problemin Çözümünü Buraya Yazınız\n",
+        "\n",
+        "kisi_1 = str(input(\"1. kisinin ismi:\")), int(input(\"1. kisinin yasi:\"))\n",
+        "kisi_2 = str(input(\"2. kisinin ismi:\")), int(input(\"2. kisinin yasi:\"))\n",
+        "\n",
+        "if kisi_2[1] > kisi_1[1] :\n",
+        "     print(f\"{kisi_2[0].capitalize()}'in yasi daha buyuk ve {kisi_2[1]} yasinda.\")\n",
+        "elif kisi_2[1] == kisi_1[1]:\n",
+        "    print(f\"{kisi_1[0].capitalize()} ve {kisi_2[0].capitalize()}'nin yaslari esittir.\")\n",
+        "else:\n",
+        "    print(f\"{kisi_1[0].capitalize()}'in yasi daha buyuk ve {kisi_1[1]} yasinda.\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 135,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Gorkem'in yasi daha buyuk ve 20 yasinda.\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Variables\n",
+        "isim1 = str(input(\"1. kisinin ismi: \"))\n",
+        "yas1 = int(input(\"1. kisinin yasi: \"))\n",
+        "\n",
+        "isim2 = str(input(\"2. kisinin ismi: \"))\n",
+        "yas2 = int(input(\"1. kisinin ismi: \"))\n",
+        "\n",
+        "#Conditions\n",
+        "if yas2 > yas1 :\n",
+        "     print(f\"{isim1.capitalize()}'in yasi daha buyuk ve {yas1} yasinda.\")\n",
+        "elif yas2 == yas1:\n",
+        "    print(f\"{isim1.capitalize()} ve {isim2.capitalize()}'nin yaslari esittir.\")\n",
+        "else:\n",
+        "    print(f\"{isim1.capitalize()}'in yasi daha buyuk ve {yas1} yasinda.\")"
       ]
     },
     {
@@ -112,13 +204,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {
         "id": "TSAXs8et_Te9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Atesiniz 37.5 derece. AVM'ye girebilirsin.\n"
+          ]
+        }
+      ],
       "source": [
-        "# 4.Problemin Çözümünü Buraya Yazınız"
+        "# 4.Problemin Çözümünü Buraya Yazınız\n",
+        "\n",
+        "sicaklik = float(input(\"Atesinizi giriniz:\"))\n",
+        "\n",
+        "if sicaklik > 37.5:\n",
+        "    print(f\"Atesiniz {sicaklik} derece. AVM'ye giremezsin!\")\n",
+        "else:\n",
+        "    print(f\"Atesiniz {sicaklik} derece. AVM'ye girebilirsin.\")"
       ]
     },
     {
@@ -150,13 +257,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 78,
       "metadata": {
         "id": "t-XPI_u0_Te-"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "19.723865877712033\n",
+            "Normal\n"
+          ]
+        }
+      ],
       "source": [
-        "# 5.Problemin Çözümünü Buraya Yazınız"
+        "# 5.Problemin Çözümünü Buraya Yazınız\n",
+        "agirlik = float(input(\"Agirliginiz (kg): \"))\n",
+        "boy = float(input(\"Boyunuz (cm): \"))\n",
+        "\n",
+        "bmi = agirlik / (boy/100) ** 2\n",
+        "print(bmi)\n",
+        "\n",
+        "if bmi < 18.5:\n",
+        "    print(\"Zayif\")\n",
+        "elif 18.5 <= bmi <= 25:\n",
+        "    print(\"Normal\")\n",
+        "elif 25 < bmi <= 30:\n",
+        "    print(\"Fazla Kilolu\")\n",
+        "elif 30 < bmi: \n",
+        "    print(\"Obez\")"
       ]
     },
     {
@@ -173,13 +303,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 125,
       "metadata": {
         "id": "Tu2mcgco_Te-"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Ehliyet alamazsiniz.\n"
+          ]
+        }
+      ],
       "source": [
-        "# 6.Problemin Çözümünü Buraya Yazınız"
+        "# 6.Problemin Çözümünü Buraya Yazınız\n",
+        "\n",
+        "kisi = input(\"Isminiz\"), int(input(\"Yasiniz:\")), input(\"Egitim durumunuz: \")\n",
+        "\n",
+        "if kisi[1] > 18 and kisi[2] == \"lise\" or kisi[2] == \"universite\":\n",
+        "    print(f\"{kisi[0].capitalize()}, yasiniz {kisi[1]} ve egitim durumunuz {kisi[2]}. Ehliyet alabilirsiniz.\")\n",
+        "else:\n",
+        "    print(\"Ehliyet alamazsiniz.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 134,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Ehliyet alamazsiniz.\n"
+          ]
+        }
+      ],
+      "source": [
+        "isim = str(input())\n",
+        "yas = int(input())\n",
+        "egitim = str(input())\n",
+        "\n",
+        "if yas > 18 and egitim == \"lise\" or egitim == \"universite\" or egitim == \"üniversite\":\n",
+        "    print(f\"{isim.capitalize()}, yasiniz {yas} ve egitim seviyeniz {egitim}. Ehliyet alabilirsiniz.\")\n",
+        "else:\n",
+        "    print(\"Ehliyet alamazsiniz.\")"
       ]
     },
     {
@@ -213,28 +382,38 @@
       },
       "outputs": [],
       "source": [
-        "# 7.Problemin Çözümünü Buraya Yazınız"
+        "# 7.Problemin Çözümünü Buraya Yazınız\n",
+        "\n",
+        "yil = int(input(\"Yil giriniz: \"))\n"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3.10.5 64-bit",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.10.5"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.3"
     },
     "orig_nbformat": 4,
     "vscode": {
       "interpreter": {
         "hash": "5026d2d6e7aaaaba093def813beadff083d8733e4a511af01735cbabd156995d"
       }
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
