--- a/3. Hafta/Eğitim Öncesi/3.Hafta Eğitim Öncesi Görevleri.ipynb
+++ b/3. Hafta/Eğitim Öncesi/3.Hafta Eğitim Öncesi Görevleri.ipynb
@@ -376,15 +376,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "4uWh8qUL_Te_"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2000  artik yildir\n"
+          ]
+        }
+      ],
       "source": [
         "# 7.Problemin Çözümünü Buraya Yazınız\n",
         "\n",
-        "yil = int(input(\"Yil giriniz: \"))\n"
+        "yil = int(input(\"Yil giriniz: \"))\n",
+        "\n",
+        "if (yil % 4 == 0 and yil % 100 == 0 or yil % 400 == 0):\n",
+        "    print(yil ,\" artik yildir\")\n",
+        "else:\n",
+        "    print(yil , \"artik yil degildir\")\n"
       ]
     }
   ],
@@ -407,7 +420,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.3"
+      "version": "3.12.4"
     },
     "orig_nbformat": 4,
     "vscode": {
