--- a/3. Hafta/Eğitim Öncesi/3.Hafta Eğitim Öncesi Görevleri.ipynb
+++ b/3. Hafta/Eğitim Öncesi/3.Hafta Eğitim Öncesi Görevleri.ipynb
@@ -257,7 +257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 23,
       "metadata": {
         "id": "t-XPI_u0_Te-"
       },
@@ -266,7 +266,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "19.723865877712033\n",
+            "23.53\n",
             "Normal\n"
           ]
         }
@@ -277,15 +277,15 @@
         "boy = float(input(\"Boyunuz (cm): \"))\n",
         "\n",
         "bmi = agirlik / (boy/100) ** 2\n",
-        "print(bmi)\n",
+        "print(f\"{bmi:.2f}\")\n",
         "\n",
         "if bmi < 18.5:\n",
         "    print(\"Zayif\")\n",
-        "elif 18.5 <= bmi <= 25:\n",
+        "elif 18.5 <= bmi < 25:\n",
         "    print(\"Normal\")\n",
-        "elif 25 < bmi <= 30:\n",
+        "elif 25 <= bmi < 30:\n",
         "    print(\"Fazla Kilolu\")\n",
-        "elif 30 < bmi: \n",
+        "elif 30 <= bmi: \n",
         "    print(\"Obez\")"
       ]
     },
@@ -329,21 +329,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Ehliyet alamazsiniz.\n"
+            "Gorkem, yasiniz 20 ve egitim seviyeniz universite. Ehliyet alabilirsiniz.\n"
           ]
         }
       ],
       "source": [
-        "isim = str(input())\n",
-        "yas = int(input())\n",
-        "egitim = str(input())\n",
+        "isim = str(input(\"Isminizi giriniz:\"))\n",
+        "yas = int(input(\"Yasinizi giriniz: \"))\n",
+        "egitim = str(input(\"Egitim durumunuzu giriniz:\"))\n",
         "\n",
         "if yas > 18 and egitim == \"lise\" or egitim == \"universite\" or egitim == \"üniversite\":\n",
         "    print(f\"{isim.capitalize()}, yasiniz {yas} ve egitim seviyeniz {egitim}. Ehliyet alabilirsiniz.\")\n",
