--- a/4. Hafta/Eğitim Sonrası/4.Hafta Eğitim Sonrası Görevleri.ipynb
+++ b/4. Hafta/Eğitim Sonrası/4.Hafta Eğitim Sonrası Görevleri.ipynb
@@ -11,11 +11,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{123: ['Gorkem', 'Bulut', '555555', '2003'], 421: ['Gizem', 'Bulut', '555667776', '2007'], 2315: ['Ahmet', 'Dunno', '6786456', '1900']}\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1.Problemin Çözümünü Buraya Yazınız"
+    "# 1.Problemin Çözümünü Buraya Yazınız\n",
+    "#Tekrar bak\n",
+    "ogrenciler = {}\n",
+    "\n",
+    "for i in range(3):\n",
+    "    okulNo = input(f\"{i+1}. okul numarasi giriniz:\")\n",
+    "    isim = input(f\"{i+1}. isim giriniz:\")\n",
+    "    soyisim = input(f\"{i+1}. soyisim giriniz: \")\n",
+    "    telefonNo = input(f\"{i+1}.  telefon numarasi giriniz:\")\n",
+    "    dogumTarihi = input(f\"{i+1}. doğum tarihi giriniz:\")\n",
+    "\n",
+    "    ogrenciler[int(okulNo)] = [isim, soyisim, telefonNo, dogumTarihi]\n",
+    "\n",
+    "print(ogrenciler)"
    ]
   },
   {
@@ -47,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2.Problemin a Şıkkının Çözümünü Buraya Yazınız"
+    "# 2.Problemin a Şıkkının Çözümünü Buraya Yazınız\n"
    ]
   },
   {
@@ -136,8 +157,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.5"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   },
   "orig_nbformat": 4,
   "vscode": {
