4th Week Polishes
Organizing a bit

--- a/4. Hafta/Eğitim Sonrası/4.Hafta Eğitim Sonrası Görevleri.ipynb
+++ b/4. Hafta/Eğitim Sonrası/4.Hafta Eğitim Sonrası Görevleri.ipynb
@@ -11,20 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{123: ['Gorkem', 'Bulut', '555555', '2003'], 421: ['Gizem', 'Bulut', '555667776', '2007'], 2315: ['Ahmet', 'Dunno', '6786456', '1900']}\n"
+      "{123: ['Gorkem', 'Bulut', '5553345555', '2003'], 334: ['Ahmet', 'Dunno', '666554355', '1999'], 506: ['Sinem', 'Dunno2', '77543556', '2002']}\n"
      ]
     }
    ],
    "source": [
     "# 1.Problemin Çözümünü Buraya Yazınız\n",
-    "#Tekrar bak\n",
+    "#Tekrar bak \n",
     "ogrenciler = {}\n",
     "\n",
     "for i in range(3):\n",
