4th Week Updates
After course work 90%

--- a/4. Hafta/Eğitim Sonrası/4.Hafta Eğitim Sonrası Görevleri.ipynb
+++ b/4. Hafta/Eğitim Sonrası/4.Hafta Eğitim Sonrası Görevleri.ipynb
@@ -64,11 +64,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 378,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 10, 15, 20]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2.Problemin a Şıkkının Çözümünü Buraya Yazınız\n"
+    "# 2.Problemin a Şıkkının Çözümünü Buraya Yazınız\n",
+    "\n",
+    "numbers = [5,10,10,15,15,15,20,20,20,20]\n",
+    "altNumbersList = []\n",
+    "\n",
+    "for i in numbers:\n",
+    "    if i not in altNumbersList:\n",
+    "        altNumbersList.append(i)\n",
+    "\n",
+    "print(altNumbersList)"
    ]
   },
   {
@@ -89,11 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2.Problemin b Şıkkının Çözümünü Buraya Yazınız"
+    "# 2.Problemin b Şıkkının Çözümünü Buraya Yazınız\n",
+    "numbers = [5,10,10,15,15,15,20,20,20,20]\n",
+    "repeatNumbers = []\n",
+    "uniqueNumbers = []\n"
    ]
   },
   {
@@ -110,11 +130,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 371,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kesisim: {4, 5}\n",
+      "Fark: {1, 2, 3}\n",
+      "Birleşim: {1, 2, 3, 4, 5, 6, 7, 8}\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3.Problemin Çözümünü Buraya Yazınız"
+    "# 3.Problemin Çözümünü Buraya Yazınız\n",
+    "sn1 = {1,2,3,4,5}\n",
+    "sn2 = {4,5,6,7,8}\n",
+    "\n",
+    "print(f\"Kesisim: {sn1.intersection(sn2)}\")\n",
+    "print(f\"Fark: {sn1.difference(sn2)}\")\n",
+    "print(f\"Birleşim: {sn1.union(sn2)}\")"
    ]
   },
   {
@@ -142,11 +178,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 377,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solidwork\n",
+      "SOLIDWORK\n",
+      "solidwork\n",
+      "sOLIDwORK\n",
+      "Solidwork\n",
+      "SolidWork\n",
+      "False\n",
+      "False\n",
+      "-1\n",
+      "0\n",
+      "1\n",
+      "['SolidWork']\n",
+      "SolidWork\n",
+      "1SolidWork0\n",
+      "False\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4.Problemin Çözümünü Buraya Yazınız"
+    "# 4.Problemin Çözümünü Buraya Yazınız\n",
+    "\n",
+    "k = \"SolidWork\"\n",
+    "\n",
+    "print(k.capitalize())\n",
+    "print(k.upper())\n",
+    "print(k.lower())\n",
+    "print(k.swapcase())\n",
+    "print(k.title())\n",
+    "print(k.replace(\"A\", \"U\"))\n",
+    "\n",
+    "print(k.endswith(\"c\"))\n",
+    "print(k.startswith(\"D\"))\n",
+    "print(k.find(\"U\"))\n",
+    "print(k.index(\"S\"))\n",
+    "print(k.count(\"W\"))\n",
+    "\n",
+    "print(k.split(\" \"))\n",
+    "print(k.strip(\" w \"))\n",
+    "print(k.join(\"10\"))\n",
+    "print(k.islower())\n",
+    "print(k.isalpha()) #All alphabetic?\n",
+    "print(k.isdigit()) #All numbers?"
    ]
   }
  ],
