--- a/4. Hafta/Eğitim Sonrası/4.Hafta Eğitim Sonrası Görevleri.ipynb
+++ b/4. Hafta/Eğitim Sonrası/4.Hafta Eğitim Sonrası Görevleri.ipynb
@@ -81,9 +81,9 @@
     "numbers = [5,10,10,15,15,15,20,20,20,20]\n",
     "altNumbersList = []\n",
     "\n",
-    "for i in numbers:\n",
-    "    if i not in altNumbersList:\n",
-    "        altNumbersList.append(i)\n",
+    "for number in numbers:\n",
+    "    if number not in altNumbersList:\n",
+    "        altNumbersList.append(number)\n",
     "\n",
     "print(altNumbersList)"
    ]
@@ -113,7 +113,11 @@
     "# 2.Problemin b Şıkkının Çözümünü Buraya Yazınız\n",
     "numbers = [5,10,10,15,15,15,20,20,20,20]\n",
     "repeatNumbers = []\n",
-    "uniqueNumbers = []\n"
+    "uniqueNumbers = []\n",
+    "\n",
+    "sozluk = {}\n",
+    "\n",
+    "for number in numbers:\n"
    ]
   },
   {
