4th Week Updates
Polising

--- a/4. Hafta/Eğitim Sonrası/4.Hafta Eğitim Sonrası Görevleri.ipynb
+++ b/4. Hafta/Eğitim Sonrası/4.Hafta Eğitim Sonrası Görevleri.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [
     {
@@ -106,18 +106,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 386,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tekrar Edenler: [10, 10, 15, 15, 15, 20, 20, 20, 20]\n",
+      "Tekrar Etmeyenler: [5]\n"
+     ]
+    }
+   ],
    "source": [
     "# 2.Problemin b Şıkkının Çözümünü Buraya Yazınız\n",
+    "#Mutlaka tekrar üstünden geç\n",
+    "\n",
     "numbers = [5,10,10,15,15,15,20,20,20,20]\n",
     "repeatNumbers = []\n",
     "uniqueNumbers = []\n",
     "\n",
     "sozluk = {}\n",
     "\n",
-    "for number in numbers:\n"
+    "for number in numbers:\n",
+    "    if number in sozluk:\n",
+    "        sozluk[number] += 1\n",
+    "    else:\n",
+    "        sozluk[number] = 1\n",
+    "\n",
+    "for number, sayac in sozluk.items():\n",
+    "    if sayac == 1:\n",
+    "        uniqueNumbers.append(number)\n",
+    "    else:\n",
+    "        repeatNumbers.extend([number] * sayac)\n",
+    "\n",
+    "print(\"Tekrar Edenler:\", repeatNumbers)\n",
+    "print(\"Tekrar Etmeyenler:\", uniqueNumbers)"
    ]
   },
   {
