Addition to 5th Week
After workshop files added

--- a/3. Hafta/Eğitim Öncesi/3.Hafta Eğitim Öncesi Görevleri.ipynb
+++ b/3. Hafta/Eğitim Öncesi/3.Hafta Eğitim Öncesi Görevleri.ipynb
@@ -397,7 +397,7 @@
         "if (yil % 4 == 0 and yil % 100 == 0 or yil % 400 == 0):\n",
         "    print(yil ,\" artik yildir\")\n",
         "else:\n",
-        "    print(yil , \"artik yil degildir\")\n"
+        "    print(yil , \"artik yil degildir\")"
       ]
     }
   ],
