--- a/10. Hafta/Eğitim Sonrası/10. Hafta Eğitim Sonrası Görevleri.ipynb
+++ b/10. Hafta/Eğitim Sonrası/10. Hafta Eğitim Sonrası Görevleri.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -65,18 +65,18 @@
       "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
       "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
       "[  0.  25.  50.  75. 100.]\n",
-      "[24 22 24 23 26]\n",
-      "[ 0.07472722 -0.62855963 -0.14607374 -0.14932127  0.08543694  0.88524488\n",
-      " -0.3668199   0.96634905 -0.90807884  0.00192393]\n",
-      "[[ 54.5177482    5.43248436  58.49103792 -19.48991966  49.81010013]\n",
-      " [-28.32300155 -16.51596183  38.83431246 -57.3956342  -11.35870021]\n",
-      " [ 24.52513951  17.58165428  21.7770071   55.32523174 -47.97356113]]\n",
-      "[148.76145095 -74.75898533  71.2354715 ]\n",
-      "[ 50.71988616   6.49817682 119.10235748 -21.56032212  -9.52216121]\n",
-      "58.49103792375736\n",
-      "-57.39563419646399\n",
-      "9.682529141764071\n",
-      "58.49103792375736\n",
+      "[15 26 14 18 27]\n",
+      "[-0.45048289  0.9958681  -0.57133309 -0.01399703  0.53500253  0.66531262\n",
+      " -0.05152229 -0.65960211  0.25200878 -0.38493424]\n",
+      "[[ 26.83274868   2.02640018 -39.04737635  24.70211566  80.24365401]\n",
+      " [-76.09520142  31.04408183  43.04311482  37.5182422   58.05672898]\n",
+      " [ 58.32217997  60.08869464  84.98097259 -49.23040621   9.46666876]]\n",
+      "[ 94.75754218  93.5669664  163.62810975]\n",
+      "[  9.05972723  93.15917664  88.97671106  12.98995166 147.76705175]\n",
+      "84.9809725852608\n",
+      "-76.09520142136023\n",
+      "23.46350788883047\n",
+      "84.9809725852608\n",
       "[10 11 12]\n",
       "[20 19 18 17 16 15 14 13 12 11 10]\n",
       "[]\n",
@@ -161,7 +161,9 @@
     "    print(x**2)\n",
     "power(seri2)\n",
     "\n",
-    "# 19- Üretilen matris elemanlarının hangisi pozitif çift sayıdır ? Aralığı (-50,+50) arasında yapınız.\n"
+    "# 19- Üretilen matris elemanlarının hangisi pozitif çift sayıdır ? Aralığı (-50,+50) arasında yapınız.\n",
+    "_19 = np.random.randint(-50, 51, size=(3, 5))\n",
+    "__19 = _19[(_19 > 0) & (_19 % 2 == 0)]"
    ]
   }
  ],
